# DDParser

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
ddparser/: __init__.py  config.ini  download_data.sh  download_pretrained_model.sh  run.py  run_evaluate.sh  run_predict.sh  run_predict_query.sh  run_train.sh  run_train_parallel.sh
ddparser/ernie/: __init__.py  file_utils.py  modeling_ernie.py  tokenizing_ernie.py
ddparser/parser/: __init__.py  config.py  model.py
ddparser/parser/data_struct/: __init__.py  corpus.py  data.py  embedding.py  field.py  metric.py  utils.py  vocab.py
ddparser/parser/nets/: __init__.py  biaffine.py  bilstm.py  char_lstm.py  char_transformer.py  dropouts.py  embedding.py  mlp.py  nn.py  rnn.py  transformer.py
ddparser/tools/representation/: README.md  gnn.py
ddparser/tools/representation/demo/: run_demo.sh
ddparser/tools/representation/demo/ERNIE/: run_classifier.py
ddparser/tools/representation/demo/ERNIE/finetune/: classifier.py
ddparser/tools/representation/demo/ERNIE/reader/: task_reader.py
ddparser/tools/representation/demo/LCQMC/: preprocess_data.py
tools/representation/: README.md  gnn.py  graph.py  utils.py
tools/representation/demo/: run_demo.sh
tools/representation/demo/ERNIE/: batching.py  classify_infer.py  ernie_encoder.py  run_classifier.py
tools/representation/demo/ERNIE/finetune/: classifier.py  mrc.py  sequence_label.py
tools/representation/demo/ERNIE/model/: ernie.py  ernie_v1.py  transformer_encoder.py
tools/representation/demo/ERNIE/reader/: pretraining.py  task_reader.py
tools/representation/demo/ERNIE/utils/: args.py  cmrc2018_eval.py  fp16.py  init.py
tools/representation/demo/LCQMC/: preprocess_data.py
tools/struct_info/: README.md  extract.py  process.py
